# task-manager-app

./: .gitignore  CMakeLists.txt  README.md  tasks.db
db/: tasks.db
public/: index.html  style.css
src/: main.cpp  task_manager.cpp  task_manager.h
